# explore-claude-code

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.local.yml  local.db  main.py  pyproject.toml  test.db
app/: config.py  create_superuser.py  database.py  dependencies.py  main.py
app/models/: heroku.py  user.py
app/routers/: accounts.py  analytics.py  auth.py  db_connection.py  users.py
app/schemas/: account_read.py  analytics.py  db_connection.py  stripe_read.py  user.py
app/services/: auth_service.py  db_connection_service.py  user_service.py
frontend/: app.vue  nuxt.config.ts  package.json
frontend/components/: AppSidebar.vue  SentimentChart.vue  StatCard.vue
frontend/components/users/: UserModal.vue
frontend/composables/: useApi.ts
frontend/layouts/: default.vue
frontend/middleware/: auth.global.ts  superuser.ts
frontend/modules/: tailwind-postcss-fix.ts
frontend/pages/: dashboard.vue  index.vue  login.vue
frontend/pages/accounts/: [id].vue  index.vue
frontend/pages/settings/: db.vue
frontend/pages/users/: index.vue
frontend/stores/: auth.ts
tests/: conftest.py  test_auth.py  test_db_connection.py  test_users.py
